--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,21 @@
 .morado{
   background-image: url('fondo2.png');
   background-position: center;
-  background-size: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+#animacion{
+  animation-name: example;
+  animation-duration: 5s;
+}
+
+
+
+@keyframes example {
+  0%{
+    opacity: 0
+  }
+100%{
+  opacity: 1
+}
 }
